--- a/portpolio/src/main/resources/templates/fragments/header.html
+++ b/portpolio/src/main/resources/templates/fragments/header.html
@@ -31,16 +31,16 @@
 					-->
 					<ul class="d-flex navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" th:href="" sec:authorize="isAnonymous()">LOGIN</a>
+							<a class="nav-link" th:href="@{/member/login}" sec:authorize="isAnonymous()">LOGIN</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="" sec:authorize="isAnonymous()">JOIN</a>
+							<a class="nav-link" th:href="@{/member/join}" sec:authorize="isAnonymous()">JOIN</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="" sec:authorize="isAuthenticated()">LOGOUT</a>
+							<a class="nav-link" th:href="@{/member/logout}" sec:authorize="isAuthenticated()">LOGOUT</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="" sec:authorize="isAuthenticated()" sec:authentication="principal.username"></a>
+							<a class="nav-link" th:href="@{/member/member}" sec:authorize="isAuthenticated()" sec:authentication="principal.username"></a>
 						</li>
 					</ul>
 				</div>
