--- a/portpolio/src/main/resources/templates/member/join.html
+++ b/portpolio/src/main/resources/templates/member/join.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+<html lang="ko"	xmlns:th="http://www.thymeleaf.org" 
 				xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-				layout:decorate="~{fragments/layout}"
-><!-- layout:decorate="~{fragments/layout}" fragments폴더안에  layout 렌더링-->
+				layout:decorate="~{fragments/layout}">	<!-- ##1 -->
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Login</title>
+<!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<style>
+	#btn-okay:hover{
+		background-color: rgb(109, 131, 80);
+	}
+	
+	#btn-cancel:hover{
+		color: white !important;
+		background-color: #889F69;
+	}
+	#social-oneclick{
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		margin: 0px 8px 0px 8px;
+	}
+</style>
 </head>
 <body>
+	<div class="p-5" layout:fragment="content">
+		<div style="width: 500px; border: 1px solid #D9D9D9; border-radius: 8px; margin: 16px 0px 16px 0px; padding: 48px; margin: 0 auto;">
+			<h3 style="text-align: center;">회원가입</h3>
+			<form method="post" th:action="@{/member/join}"
+											th:object="${memberForm}">
+			<div class="my-3 alert alert-primary" role="alert" th:if="${#fields.hasAnyErrors()}">
+				<div th:each="err: ${#fields.allErrors()}" th:text="${err}"></div>
+			</div>
+			<div class="my-3">
+				<label for="username"	th:text="아이디"></label>
+				<input type="text"		name="username"		id="username"	class="form-control"	th:field="*{username}">
+			</div>
+			<div class="my-3">
+				<label for="nickname"	th:text="닉네임"></label>
+				<input type="text"		name="nickname"		id="nickname"	class="form-control"	th:field="*{nickname}">
+			</div>
+			<div class="my-3">
+				<label for="password"	th:text="비밀번호"></label>
+				<input type="password"	name="password"		id="password"	class="form-control"	th:field="*{password}">
+			</div>
+			<div class="my-3">
+				<label for="password2"	th:text="비밀번호확인"></label>
+				<input type="password"	name="password2"	id="password2"	class="form-control"	th:field="*{password2}">
+			</div>
+			<div class="my-3">
+				<label for="Email"		th:text="이메일"></label>
+				<input type="Email"		name="Email"		id="Email"		class="form-control"	th:field="*{email}">
+			</div>
+			<div class="my-3">
+				<label for="age"		th:text="나이"></label>
+				<input type="text"		name="age"		id="age"		class="form-control"	th:field="*{age}">
+			</div>
+			<!-- 회원가입 버튼 -->
+			<div class="my-3">
+				<input type="submit" class="btn" value="회원가입" id="btn-okay" style="color: white; background-color: #889F69;"/>
+				<input type="reset" class="btn" value="취소" id="btn-cancel" style="color: #889F69; border-color: #889F69;"/>
+			</div>
+			</form>
+		</div>
+	</div>
 
-<div layout:fragment="content">
-	<div class="container my-3">
-		<h3>MEMBER-JOIN</h3>
-		<form method="post" th:action="@{/member/join}"
-							th:object="${memberForm}" >
-							
-		    <div class="my-3  alert  alert-danger"  role="alert"  th:if="${#fields.hasAnyErrors()}">
-                <div  th:each="err: ${#fields.allErrors()}"  th:text="${err}" ></div>
-            </div>   
-            <!-- end div --> 				
-			<div class="my-3">
-	           <label for="username"  th:text ="아이디"></label>
-	           <input type="text"    name="username"  id="username"  
-	           		  class="form-control"  th:field="*{username}"  > 
-	        </div>								
-	        <div class="my-3">
-	           <label for="nickname"  th:text ="닉네임"></label>
-	           <input type="text"    name="nickname"  id="nickname"  
-	           		  class="form-control"  th:field="*{nickname}"  > 
-	        </div>								
-	        <!-- E:div --> 
-			<div class="my-3">
-	           <label for="password"  th:text ="비밀번호"></label>
-	           <input type="password"    name="password"  id="password"
-	           	      class="form-control"  th:field="*{password}"   > 
-	         </div>
-	         <!-- E:div --> 
-	         <div class="my-3">
-	           <label for="password2"  th:text ="비밀번호확인"></label>
-	           <input type="password"    name="password2"  id="password2"  
-	           		 class="form-control"  th:field="*{password2}"  > 
-	         </div>
-	         <!-- E:div --> 
-	         <div class="my-3">
-	           <label for="email"  th:text ="이메일"></label>
-	           <input type="email"    name="email"  id="email"  
-	            class="form-control"  th:field="*{email}"   > 
-	         </div>
-	         <!-- E:div --> 
-	          <div class="my-3">
-	           <label for="age"  th:text ="나이"></label>
-	           <input type="number"    name="age"  id="age"  
-	           		  class="form-control"  th:field="*{age}"  > 
-	        </div>	
-	         <div class="my-3">
-	           <input type="submit"  class="btn btn-primary" value="회원가입"    /> 
-	           <input type="reset"  class="btn btn-outline-primary" value="취소"    /> 
-	         </div>
-	         <!-- E:div --> 
-		</form>
-	</div>	
-		
-</div>
-	
 </body>
 </html>
