--- a/portpolio/src/main/resources/templates/member/login.html
+++ b/portpolio/src/main/resources/templates/member/login.html
@@ -1,43 +1,93 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+<html lang="ko"	xmlns:th="http://www.thymeleaf.org" 
 				xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-				layout:decorate="~{fragments/layout}"
-><!-- layout:decorate="~{fragments/layout}" fragments폴더안에  layout 렌더링-->
+				layout:decorate="~{fragments/layout}">	<!-- ##1 -->
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Login</title>
+<!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<style>
+   #btn-okay:hover{
+      background-color: rgb(109, 131, 80);
+   }
+   
+   #btn-cancel:hover{
+      color: white !important;
+      background-color: #889F69;
+   }
+   .login{
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      margin: 7px 7px;
+   }
+
+   .btn{
+      width: 100%;
+      height: 45px; 
+   }
+   .btn1{
+   	 margin-bottom: 30px;
+   }
+   .btn2{
+   	 margin-top: 20px;
+   }
+   .form-check-input:active{
+      background-color: #889F69;
+      border: solid 1px #374229;
+   }
+
+   .form-check-input:focus{
+      background-color: #889F69;
+   }
+</style>
+
 </head>
 <body>
+	<div class="p-5" layout:fragment="content">
+		<div style="width: 500px; border: 1px solid #D9D9D9; border-radius: 8px; margin: 16px 0px 16px 0px; padding: 48px; margin: 0 auto;">
+			<h3 style="text-align: center; font-weight: bold;">로그인</h3>
+			<!--  <caption>수정사항: 아이디 비번 찾기 추가</caption> -->
 
-<div layout:fragment="content">
-	<div class="container my-3">
-		<h3>MEMBER-LOGIN</h3>
-		<form method="post" th:action="@{/member/login}">
-		
-		<!-- 오류 확인 -->
-		<div th:if="${param.error}">
-			<div class="alert alert-danger">사용자를 확인해주세요.</div>
+			<form method="post" th:action="@{/member/login}">
+			
+			<div class="my-3">
+				<label for="username"	th:text="아이디"></label>
+				<input type="text"		name="username"		id="username"	class="form-control">
+			</div>
+			<div class="my-3">
+				<label for="password"	th:text="비밀번호"></label>
+				<input type="password"	name="password"		id="password"	class="form-control">
+			</div>
+			
+			<!-- 아이디/비밀번호가 다르면 나오는 알림! -->
+			<div th:if="${param.error}">
+				<div class="text-danger p-2" style="font-size:12px">아이디 또는 비밀번호가 잘못되었습니다. 아이디와 비밀번호를 확인해주세요.</div>
+			</div>
+			<div>
+			<input type="submit" class="btn btn1" value="로그인" id="btn-okay" style="color: white; background-color: #889F69;"/>
+           </div>
+			
+			<!-- api로그인 버튼 start -->
+			<p style="text-align:center">SNS 계정으로 로그인/가입</p>
+        	 <div class="social-login" style="display: flex; justify-content: center;">
+            	<div class="login" style="background-color: #FFE513;"></div>
+            	<div class="login" style="background-color: #00BB00;"></div>
+            	<div class="login" style="background-color: #E83B2F;"></div>
+        	 </div>
+        	 <!-- api로그인 버튼 end -->
+        	 
+			<!-- 로그인버튼 -->
+         <div>
+             <input type="reset" class="btn btn2" value="회원가입" id="btn-cancel" style="color: #889F69; border-color: #889F69;"/>
+         </div>
+			</form>
+			
 		</div>
-		
-			<div class="my-3">
-	           <label for="username"  th:text ="사용자ID"></label>
-	           <input type="text"    name="username"  id="username"   class="form-control"    > 
-	        </div>
-	        <!-- E:div --> 
-			<div class="my-3">
-	           <label for="password"  th:text ="비밀번호"></label>
-	           <input type="password"    name="password"  id="password"   class="form-control"    > 
-	         </div>
-	         <!-- E:div --> 
-	         <div class="my-3">
-	           <input type="submit"  class="btn btn-primary" value="로그인"    /> 
-	         </div>
-	         <!-- E:div --> 
-		</form>
-	</div>	
-		
-</div>
-	
-<!-- Controller - localhost:8080/test1 -->
+	</div>
+
 </body>
 </html>
