--- a/portpolio/src/main/resources/templates/member/member.html
+++ b/portpolio/src/main/resources/templates/member/member.html
@@ -12,13 +12,16 @@
 
 <div layout:fragment="content">
 	<div class="container my-3">
-		<h3 th:text="MYPAGE"></h3>		<!-- 인가 : 권한 -->
-		<div class="alert alert-info" sec:authorize="hasRole('ADMIN')">ADMIN ROLE</div>
-		<div class="alert alert-info" sec:authorize="hasRole('MEMBER')">MEMBER ROLE</div>
-		<hr/>							<!-- 인증 : 신원확인 -->
-		<div class="alert alert-info" sec:authentication="principal"></div>
-		<div class="alert alert-info" sec:authentication="principal.authorities"></div>
-		<div class="alert alert-info" sec:authentication="principal.username"></div>
+				<!-- 인가 : 권한 -->
+		<div class="card my-5 p-5" sec:authorize="hasRole('ADMIN')">
+		<h3 th:text="ADMINPAGE"></h3>
+		ADMIN ROLE
+		</div>
+		<div class="card my-5 p-5" sec:authorize="hasRole('MEMBER')">
+		<h3 th:text="MYPAGE"></h3>
+		MEMBER ROLE
+		</div>
+
 	</div>	
 </div>
 </body>
